add cart function and better design

--- a/product-info.html
+++ b/product-info.html
@@ -94,6 +94,8 @@
       </div>
       <div class="alert alert-danger" id="alert" role="alert">
       </div>
+      <div class="alert alert-info" id="successAlert" role="alert">
+      </div>
     </div>
   </main>
   <footer class="text-muted">
