--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <!-- Meta Google -->
-
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/alert.css">
@@ -60,6 +60,7 @@
   </footer>
 
   <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="js/alert.js"></script>
   <script src="js/login.js"></script>
 </body>
 
