--- a/main.html
+++ b/main.html
@@ -4,8 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
   <title>eMercado - Todo lo que busques está aquí</title>
-
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/alert.css">
@@ -15,14 +16,15 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
+      <a class="navbar-brand" href="main.html" id="logo-navbar">e•mercado</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between align-items-center">
+        <ul class="navbar-nav w-100 gap-4 justify-content-end align-items-center">
           <li class="nav-item">
-            <a class="nav-link active" href="main.html">Inicio</a>
+            <a class="nav-link" href="main.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -34,9 +36,9 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="options_btn">
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="cart.html" id="my-cart">Mi Carrito</a></li>
-              <li><a class="dropdown-item" href="my-profile.html" id="my-profile">Mi Perfil</a></li>
-              <li><a class="dropdown-item" href="index.html" id="log-out">Salir</a></li>
+              <li><a class="dropdown-item" href="my-profile.html" id="my-profile">Mi Perfil <img class="avatar-nav-profile" src="" alt=""></a></li>
+              <li><a class="dropdown-item" href="cart.html" id="my-cart">Mi Carrito <span class="nav-icon fas fa-shopping-cart"></span></a></li>
+              <li><a class="dropdown-item" href="index.html" id="log-out">Salir <span class="nav-icon fas fa-sign-out-alt"></span></a></li>
             </ul>
           </li>
         </ul>
